<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_rol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rol_textview_name" 
            android:layout_weight="2"/>

        <Spinner
            android:id="@+id/spinner_rol"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_nit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nit_number_text"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editText_nit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_text" />

        <EditText
            android:id="@+id/editText_user_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.83"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_necessity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neccesity_text"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView_neccesity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" 
            android:onClick="onNeedClick"/>

        <TextView
            android:id="@+id/textView_plazo_maximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" 
            android:visibility="gone"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:onClick="onRegisterUser" />

</LinearLayout>
