<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_plazo_maximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plazo_max_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"  />

        <TextView
            android:id="@+id/textView_plazo_maximo_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_plazo_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plazo_minimo_text"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView_plazo_min_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_periodo_gracia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo_gracia_text"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textView_periodo_gracia_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_valor_monto_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_monto_max_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_val_monto_max_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_tasa_max_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasa_max_cliente"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_tasa_max_cliente_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listView_tasas_y_plazos"
            android:layout_width="match_parent"
            android:layout_height="258dp" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
